src/test/deca/codegen/error/test_class_stack_overflow.deca
class Recursive {
	void deepDive(){
		deepDive();
	}
}

{

Recursive rec = new Recursive();
rec.deepDive();
}
